# OpenCVProj

CarPlateDetect/: CarPlateDetector.py  exeSetup.py
CarPlateDetect/references/: CarPlateDetector.py
CarPlateDetect/src/: Copy of DetectCarNumRegion.py
ObjectMatcher/: ObjectMatcher.py  data.txt
PythonPrj/CarPlateDetect/: CarPlateDetector.py
PythonPrj/CarPlateDetect/references/plate_recognition/: Main.py
PythonPrj/FontExtractor/: FontExtractor.py
PythonPrj/ObjectMatcher/: Keypoints  ObjectMatcher.py
Win32Prj/Win32OpenCV/: Win32OpenCV.sln
Win32Prj/Win32OpenCV/Win32OpenCV/: Win32OpenCV.vcxproj
goExample/: CMakeLists.txt  test.go
win32/: CMakeLists.txt  win32.sln
win32/win32/: CMakeLists.txt  ReadMe.txt  kps.xml  objMatcher.cpp  objMatcher.h  win32.vcxproj  win32.vcxproj.filters
